# diffusers-rocm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-diffusers-rocm.yml
src/diffusers_server/: __main__.py  models.py  pipeline_loader.py  server.py
