[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusers-server"
version = "0.1.0"
description = "OpenAI-compatible HTTP server for HuggingFace diffusers (ROCm)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lemonade SDK Contributors" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "diffusers>=0.35.0",
    "transformers>=4.45",
    "accelerate>=0.30",
    "peft>=0.11",
    "safetensors>=0.4",
    "huggingface_hub>=0.24",
    "gguf>=0.10",
    "Pillow>=10",
    "sentencepiece>=0.2",
    "protobuf>=4",
    "pydantic>=2",
]

[project.scripts]
diffusers-server = "diffusers_server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
